[gd_scene load_steps=7 format=3 uid="uid://cfmunyx4yf4tf"]

[ext_resource type="Script" path="res://scripts/hero/disk_projectile.gd" id="1_0cmff"]
[ext_resource type="Texture2D" uid="uid://c7vwtk5bxxsy6" path="res://assets/weapons/crossbow/CrossbowProjectile.png" id="2_bkith"]
[ext_resource type="AudioStream" uid="uid://shpg485bo2w2" path="res://assets/sound/ability/mixkit-game-ball-tap-2073.mp3" id="3_8ta5e"]
[ext_resource type="Texture2D" uid="uid://340g2borks57" path="res://assets/weapons/crossbow/full_pizza.png" id="4_iv8ov"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ympc6"]
radius = 6.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j88cx"]
radius = 9.0

[node name="DiskProjectile" type="RigidBody2D" groups=["friendly_projectiles"]]
z_as_relative = false
collision_layer = 4
gravity_scale = 0.0
script = ExtResource("1_0cmff")

[node name="Skin" type="Sprite2D" parent="."]
scale = Vector2(0.032856, 0.0314848)
texture = ExtResource("2_bkith")

[node name="CollisionArea" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ympc6")

[node name="Despawn" type="Timer" parent="."]
wait_time = 2.0

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_j88cx")

[node name="DamageLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="BouceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8ta5e")
volume_db = -10.0
bus = &"SFX"

[node name="Pizza" type="Sprite2D" parent="."]
scale = Vector2(1.4, 1.4)
texture = ExtResource("4_iv8ov")

[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
